--- a/app/static/assets/css/_colors.scss
+++ b/app/static/assets/css/_colors.scss
@@ -1,6 +1,8 @@
 :root {
   // light mode
 
+  --content-background:#defbf7;
+
   // sidebar
   --sb-title:#FFFFC7;
   --sb-text:black;
@@ -10,12 +12,12 @@
   --sb-menu-background:#1ebba3;
 
   // sidebar darkmode
-  --dark-sb-title:#FFFFC7;
-  --dark-sb-text:whitesmoke;
-  --dark-sb-enlighted:rgb(243, 247, 8);
-  --dark-sb-text-hover:rgb(7, 252, 11);
-  --dark-sb-background:black;
-  --dark-sb-menu-background:rgb(62, 61, 61);  
+  // --dark-sb-title:#FFFFC7;
+  // --dark-sb-text:whitesmoke;
+  // --dark-sb-enlighted:rgb(243, 247, 8);
+  // --dark-sb-text-hover:rgb(7, 252, 11);
+  // --dark-sb-background:black;
+  // --dark-sb-menu-background:rgb(62, 61, 61);  
 
   //topbar
   --topbar-background:#defbf7;
@@ -23,7 +25,12 @@
   --topbar-font:"Source Code Pro", monospace;
   
   //topbar darkmode
-  --topbar-background:rgb(62, 61, 61);
-  --topbar-text:#FFFFC7;
+  // --topbar-background:rgb(62, 61, 61);
+  // --topbar-text:#FFFFC7;
+
+  //article-item
+  --background-top:#FFFFC7;
+  --color-top:darkblue;
+  --background-bottom:#FFFFC7;
 
 }
