--- a/app/static/assets/css/_initial.scss
+++ b/app/static/assets/css/_initial.scss
@@ -46,10 +46,7 @@ body{
   height:fit-content;
   justify-content:center;
   align-items:center;
-  // position:sticky;
-  // top:0;
-  background-color: #defbf7;
-  border-bottom: solid 1px black;
+  border-bottom: solid 1px var(--sb-background);
   left: 280px;
 
 }
@@ -58,7 +55,6 @@ body{
   display:flex;
   flex:1;
   font-family:"Source Code Pro", monospace;
-  background-color: #defbf7;
 }
 
 .central .content .wrapper{
@@ -70,5 +66,4 @@ body{
   align-items: center;
   align-self:center;
   font-family:"Source Code Pro", monospace;
-  background-color: #defbf7;
 }
