refactoring home template

--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -2,7 +2,7 @@
 {% block content %}
  <div class="content">
   <div class="intro">
-    <h3> Présentation</h3>
+    <h2> Quelques mots pour me présenter...</h2>
   
     <p>Développeur d'applications de gestion d'entreprise depuis quelques décennies, j'ai voulu faire évoluer
       mes compétences et enfin prendre le temps d'aborder le développement Web.</p>
@@ -13,10 +13,10 @@
       Dans les faits, c'est beaucoup plus difficile : le temps on ne l'a pas...justement, surtout lorsque l'on est
       indépendant.</p>
   
-      <p>Je suis aussi formateur, et j'ai voulu partager avec vous mes réflexions sur mon apprentissage de ces 
+      <p>Je suis aussi formateur, et j'ai voulu partager avec toi mes réflexions sur mon apprentissage de ces 
         technologies dont j'ignorais tout.</p>
   
-      <p>Vous trouverez sur ce blog des 
+      <p>Tu trouveras sur ce blog des 
       <a href="{% url 'article_list' %}">articles</a>
       , des 
       <a href="{% url 'tuto_list' %}">tutos</a>
@@ -48,14 +48,14 @@
       plus avant et safisfaire un maximum de clients.</p>
   
       <p>J'adore les challenges ! j'adore apprendre ! alors 
-      <a href="{% url 'mail_me' %}">testez moi</a>
+      <a href="{% url 'mail_me' %}">teste-moi</a>
        !</p>
   
-      <p>N'hésitez pas à 
+      <p>N'hésite pas à 
         <a href="{% url 'mail_me' %}">me contacter</a>
          pour réagir à mes posts ou toute autre demande.</p>
       
-      <p>A très bientôt vous lire.</p>
+      <p>A très bientôt te lire.</p>
   </div>
 
  </div>
