--- a/app/static/assets/css/base.css
+++ b/app/static/assets/css/base.css
@@ -341,6 +341,7 @@ body {
   padding-left: 2%;
   padding-right: 2%;
   background-color: var(--content-background);
+  flex: 1;
 }
 
 .form-control {
@@ -367,6 +368,7 @@ body {
   font-family: "Ubuntu Mono", monospace;
   font-size: 20px;
   background-color: var(--content-background);
+  flex: 1;
 }
 
 .central .article-container .article_p {
@@ -491,6 +493,11 @@ body {
 
 .central .content .wrapper a {
   padding-top: 2em;
+}
+
+.central .content .wrapper .mail-sent .article_title {
+  color: darkblue;
+  background-color: #FFFFC7;
 }
 
 .central .content .articles-container {
