--- a/app/static/assets/css/_article.scss
+++ b/app/static/assets/css/_article.scss
@@ -78,6 +78,10 @@
   font-size: 0.8em;
 }  
 
+.central .content .articles-container .article-item .article-top .article-type .type_tag .del-article{
+  background-color: red;
+}
+
 .central .content .articles-container .article-item .article-top .article-type .type_tag a:hover {
 background-color: #FFFFC7;  
 color:darkblue;
