--- a/app/static/assets/css/base.css
+++ b/app/static/assets/css/base.css
@@ -579,6 +579,10 @@ body {
   font-size: 0.8em;
 }
 
+.central .content .articles-container .article-item .article-top .article-type .type_tag .del-article {
+  background-color: red;
+}
+
 .central .content .articles-container .article-item .article-top .article-type .type_tag a:hover {
   background-color: #FFFFC7;
   color: darkblue;
