refactoring base.html and topbar.html for darkmode management

--- a/app/templates/components/topbar.html
+++ b/app/templates/components/topbar.html
@@ -4,7 +4,7 @@
     <div class="form-check">
         <i class="fa-solid fa-toggle-off fa-lg darkon"></i>
         <i class="fa-solid fa-toggle-on fa-lg darkoff" style="display:none;"></i>
-        <div>Mode Sombre</div>
+        <div class="mode">Mode Sombre</div>
     </div>
     
     {% is_default as default_flag %}
